Capstone 1 Final Draft 1

--- a/Capstone/Capstone.csproj
+++ b/Capstone/Capstone.csproj
@@ -9,6 +9,9 @@
     <None Update="ItemInventory.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Log.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
